New functions added

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,11 @@ Collate:
     'desc_statby.R'
     'utilities.R'
     'ggpar.R'
+    'ggbarplot.R'
     'ggboxplot.R'
+    'ggdotplot.R'
+    'ggerrorplot.R'
+    'ggline.R'
     'ggstripchart.R'
     'ggviolin.R'
     'theme_pubr.R'
