--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(ggdotplot)
 export(ggerrorplot)
 export(ggline)
 export(ggpar)
+export(ggpie)
 export(ggstripchart)
 export(ggviolin)
 export(labs_pubr)
