--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,7 @@ export(ggpie)
 export(ggstripchart)
 export(ggviolin)
 export(labs_pubr)
+export(show_line_types)
+export(show_point_shapes)
 export(theme_pubr)
 import(ggplot2)
