stat_chull and stat_conf_ellipse added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,13 @@ export(ggerrorplot)
 export(ggline)
 export(ggpar)
 export(ggpie)
+export(ggscatter)
 export(ggstripchart)
 export(ggviolin)
 export(labs_pubr)
 export(show_line_types)
 export(show_point_shapes)
+export(stat_chull)
+export(stat_conf_ellipse)
 export(theme_pubr)
 import(ggplot2)
