stat_mean added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,5 +16,6 @@ export(show_line_types)
 export(show_point_shapes)
 export(stat_chull)
 export(stat_conf_ellipse)
+export(stat_mean)
 export(theme_pubr)
 import(ggplot2)
