--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,9 @@ export(ggboxplot)
 export(ggdensity)
 export(ggdotplot)
 export(ggerrorplot)
+export(gghistogram)
 export(ggline)
+export(ggmaplot)
 export(ggpar)
 export(ggpie)
 export(ggscatter)
