--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,16 @@ export(desc_statby)
 export(ggbarplot)
 export(ggboxplot)
 export(ggdensity)
+export(ggdotchart)
 export(ggdotplot)
+export(ggecdf)
 export(ggerrorplot)
 export(gghistogram)
 export(ggline)
 export(ggmaplot)
 export(ggpar)
 export(ggpie)
+export(ggqqplot)
 export(ggscatter)
 export(ggstripchart)
 export(ggviolin)
