--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.0.9999
 Date: 2016-01-18
 Authors@R: c(
     person("Alboukadel", "Kassambara", role = c("aut", "cre"), email = "alboukadel.kassambara@gmail.com"))
-Description: Create a publication ready plots using ggplot2.
+Description: Create easily publication ready plots using 'ggplot2'.
 License: GPL-2
 LazyData: TRUE
 Depends:
