theme_classic2 added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,5 +23,6 @@ export(show_point_shapes)
 export(stat_chull)
 export(stat_conf_ellipse)
 export(stat_mean)
+export(theme_classic2)
 export(theme_pubr)
 import(ggplot2)
