--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,11 +5,12 @@ Version: 0.1.0.999
 Date: 2016-07-28
 Authors@R: c(
     person("Alboukadel", "Kassambara", role = c("aut", "cre"), email = "alboukadel.kassambara@gmail.com"))
-Description: 'ggplot2' is an excellent and flexible package for elegant data visualization in R.
- However the default generated plots requires some formatting before we can send them for publication.
- Furthermore, to customize a 'ggplot', the syntax is opaque and this raises the level of difficulty
- for researchers with no advanced R programming skills.
- 'ggpubr' provides some easy-to-use functions for creating and customizing 'ggplot2'- based publication ready plots.
+Description: 'ggplot2' is an excellent and flexible package for elegant data
+    visualization in R. However the default generated plots requires some formatting
+    before we can send them for publication. Furthermore, to customize a 'ggplot',
+    the syntax is opaque and this raises the level of difficulty for researchers
+    with no advanced R programming skills. 'ggpubr' provides some easy-to-use
+    functions for creating and customizing 'ggplot2'- based publication ready plots.
 License: GPL-2
 LazyData: TRUE
 Depends:
@@ -31,6 +32,7 @@ RoxygenNote: 5.0.1
 Collate:
     'desc_statby.R'
     'diff_express.R'
+    'geom_exec.R'
     'utilities.R'
     'ggpar.R'
     'ggbarplot.R'
