--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(ggpie)
 export(ggqqplot)
 export(ggscatter)
 export(ggstripchart)
+export(ggtext)
 export(ggviolin)
 export(labs_pubr)
 export(show_line_types)
