New function get_palette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,10 +31,11 @@ Suggests:
 URL: http://www.sthda.com/english/rpkgs/ggpubr
 BugReports: https://github.com/kassambara/ggpubr/issues
 RoxygenNote: 6.0.1
-Collate:
+Collate: 
     'desc_statby.R'
     'diff_express.R'
     'geom_exec.R'
+    'get_palette.R'
     'utilities.R'
     'ggpar.R'
     'ggbarplot.R'
