--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,7 @@ Suggests:
 URL: http://www.sthda.com/english/rpkgs/ggpubr
 BugReports: https://github.com/kassambara/ggpubr/issues
 RoxygenNote: 6.0.1
-Collate:
+Collate: 
     'desc_statby.R'
     'utilities.R'
     'add_summary.R'
@@ -57,6 +57,7 @@ Collate:
     'ggline.R'
     'ggmaplot.R'
     'ggpie.R'
+    'ggpubr_args.R'
     'ggqqplot.R'
     'ggscatter.R'
     'ggstripchart.R'
