support labelling hist/density

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,4 +42,5 @@ import(ggplot2)
 importFrom(dplyr,arrange_)
 importFrom(dplyr,do)
 importFrom(dplyr,group_by_)
+importFrom(dplyr,mutate)
 importFrom(magrittr,"%>%")
