--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(facet)
 export(geom_exec)
 export(get_palette)
 export(ggadd)
+export(ggarrange)
 export(ggbarplot)
 export(ggboxplot)
 export(ggdensity)
@@ -13,9 +14,11 @@ export(ggdotchart)
 export(ggdotplot)
 export(ggecdf)
 export(ggerrorplot)
+export(ggexport)
 export(gghistogram)
 export(ggline)
 export(ggmaplot)
+export(ggpaired)
 export(ggpar)
 export(ggpie)
 export(ggqqplot)
@@ -24,6 +27,7 @@ export(ggstripchart)
 export(ggtext)
 export(ggviolin)
 export(labs_pubr)
+export(mc_test)
 export(mean_ci)
 export(mean_range)
 export(mean_sd)
@@ -35,7 +39,9 @@ export(show_line_types)
 export(show_point_shapes)
 export(stat_chull)
 export(stat_conf_ellipse)
+export(stat_cor)
 export(stat_mean)
+export(stat_stars)
 export(theme_classic2)
 export(theme_pubr)
 import(ggplot2)
@@ -43,4 +49,5 @@ importFrom(dplyr,arrange_)
 importFrom(dplyr,do)
 importFrom(dplyr,group_by_)
 importFrom(dplyr,mutate)
+importFrom(dplyr,summarise)
 importFrom(magrittr,"%>%")
