New functions compare_means

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,6 +40,7 @@ Collate:
     'desc_statby.R'
     'utilities.R'
     'add_summary.R'
+    'compare_means.R'
     'diff_express.R'
     'facet.R'
     'gene_citation.R'
@@ -72,8 +73,8 @@ Collate:
     'ggstripchart.R'
     'ggtext.R'
     'ggviolin.R'
-    'mean_comparison.R'
     'show_line_types.R'
     'show_point_shapes.R'
+    'stat_compare_means.R'
     'stat_mean.R'
     'theme_pubr.R'
