--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ import(ggplot2)
 importFrom(dplyr,arrange_)
 importFrom(dplyr,do)
 importFrom(dplyr,everything)
+importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_)
 importFrom(dplyr,mutate)
 importFrom(dplyr,summarise)
