theme_cleveland added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(stat_cor)
 export(stat_mean)
 export(stat_stars)
 export(theme_classic2)
+export(theme_cleveland)
 export(theme_pubr)
 import(ggplot2)
 importFrom(dplyr,arrange_)
