--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_summary)
 export(compare_means)
 export(desc_statby)
 export(facet)
+export(font)
 export(geom_exec)
 export(get_palette)
 export(ggadd)
