--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(mean_se_)
 export(median_iqr)
 export(median_mad)
 export(median_range)
+export(rotate)
 export(rotate_x_text)
 export(rotate_y_text)
 export(show_line_types)
