--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,6 +37,7 @@ URL: http://www.sthda.com/english/rpkgs/ggpubr
 BugReports: https://github.com/kassambara/ggpubr/issues
 RoxygenNote: 6.0.1
 Collate: 
+    'utilities_color.R'
     'utilities_base.R'
     'desc_statby.R'
     'utilities.R'
@@ -77,6 +78,7 @@ Collate:
     'ggviolin.R'
     'rotate.R'
     'rotate_axis_text.R'
+    'set_palette.R'
     'show_line_types.R'
     'show_point_shapes.R'
     'stat_compare_means.R'
