New function rremove

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -80,6 +80,7 @@ Collate:
     'ggviolin.R'
     'rotate.R'
     'rotate_axis_text.R'
+    'rremove.R'
     'set_palette.R'
     'show_line_types.R'
     'show_point_shapes.R'
