--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(median_range)
 export(rotate)
 export(rotate_x_text)
 export(rotate_y_text)
+export(rremove)
 export(set_palette)
 export(show_line_types)
 export(show_point_shapes)
