--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(ggscatter)
 export(ggstripchart)
 export(ggtext)
 export(ggviolin)
+export(grids)
 export(labs_pubr)
 export(mean_ci)
 export(mean_range)
