--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,8 @@ export(stat_stars)
 export(theme_classic2)
 export(theme_cleveland)
 export(theme_pubr)
+export(xscale)
+export(yscale)
 import(ggplot2)
 importFrom(dplyr,arrange_)
 importFrom(dplyr,do)
