--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -79,6 +79,7 @@ Collate:
     'ggstripchart.R'
     'ggtext.R'
     'ggviolin.R'
+    'gradient_color.R'
     'grids.R'
     'rotate.R'
     'rotate_axis_text.R'
