New function clean_theme()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_summary)
 export(bgcolor)
 export(border)
 export(change_palette)
+export(clean_theme)
 export(compare_means)
 export(desc_statby)
 export(facet)
