New function gradient_color

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(ggstripchart)
 export(ggtext)
 export(ggviolin)
 export(gradient_color)
+export(gradient_fill)
 export(grids)
 export(labs_pubr)
 export(mean_ci)
