--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(desc_statby)
 export(facet)
 export(font)
 export(geom_exec)
+export(get_legend)
 export(get_palette)
 export(ggadd)
 export(ggarrange)
