--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -56,6 +56,7 @@ reference:
       - rremove
       - grids
       - axis_scale
+      - get_legend
   - title: Arrange and Export Multiple ggplots
     contents:
       - ggarrange
