New function ggtexttable(): draw a textual table

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -81,6 +81,7 @@ Collate:
     'ggscatter.R'
     'ggstripchart.R'
     'ggtext.R'
+    'ggtexttable.R'
     'ggviolin.R'
     'gradient_color.R'
     'grids.R'
