--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(bgcolor)
 export(border)
 export(change_palette)
 export(clean_theme)
+export(colnames_style)
 export(compare_means)
 export(desc_statby)
 export(facet)
@@ -33,6 +34,7 @@ export(ggqqplot)
 export(ggscatter)
 export(ggstripchart)
 export(ggtext)
+export(ggtexttable)
 export(ggviolin)
 export(gradient_color)
 export(gradient_fill)
@@ -48,6 +50,7 @@ export(median_range)
 export(rotate)
 export(rotate_x_text)
 export(rotate_y_text)
+export(rownames_style)
 export(rremove)
 export(set_palette)
 export(show_line_types)
@@ -58,9 +61,11 @@ export(stat_conf_ellipse)
 export(stat_cor)
 export(stat_mean)
 export(stat_stars)
+export(tbody_style)
 export(theme_classic2)
 export(theme_cleveland)
 export(theme_pubr)
+export(ttheme)
 export(xscale)
 export(yscale)
 import(ggplot2)
