--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -35,6 +35,9 @@ reference:
     contents:
       - compare_means
       - stat_compare_means
+  - title: Plot Tables
+    contents:
+      - ggtexttable
   - title: Genomics
     desc: Plotting data obtained from genomic data analyses.
     contents:
