--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(ggline)
 export(ggmaplot)
 export(ggpaired)
 export(ggpar)
+export(ggparagraph)
 export(ggpie)
 export(ggqqplot)
 export(ggscatter)
