--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(tbody_style)
 export(theme_classic2)
 export(theme_cleveland)
 export(theme_pubr)
+export(theme_transparent)
 export(ttheme)
 export(xscale)
 export(yscale)
