New functions fill_palette and color_palette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,11 @@ export(border)
 export(change_palette)
 export(clean_theme)
 export(colnames_style)
+export(color_palette)
 export(compare_means)
 export(desc_statby)
 export(facet)
+export(fill_palette)
 export(font)
 export(geom_exec)
 export(get_legend)
