--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,11 +33,12 @@ Imports:
 Suggests:
     grDevices,
     knitr,
-    RColorBrewer
+    RColorBrewer,
+    gtable
 URL: http://www.sthda.com/english/rpkgs/ggpubr
 BugReports: https://github.com/kassambara/ggpubr/issues
 RoxygenNote: 6.0.1
-Collate: 
+Collate:
     'utilities_color.R'
     'utilities_base.R'
     'desc_statby.R'
