--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(stat_cor)
 export(stat_mean)
 export(stat_stars)
 export(tbody_style)
+export(text_grob)
 export(theme_classic2)
 export(theme_cleveland)
 export(theme_pubr)
