--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -70,6 +70,7 @@ reference:
       - ggarrange
       - ggexport
       - annotate_figure
+      - background_image
   - title: Helpers
     contents:
       - facet
