New table_cell_font() and table_cell_bg() #29

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,8 @@ export(stat_conf_ellipse)
 export(stat_cor)
 export(stat_mean)
 export(stat_stars)
+export(table_cell_bg)
+export(table_cell_font)
 export(tbody_style)
 export(text_grob)
 export(theme_classic2)
