new theme_pubclean() added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(tbody_style)
 export(text_grob)
 export(theme_classic2)
 export(theme_cleveland)
+export(theme_pubclean)
 export(theme_pubr)
 export(theme_transparent)
 export(ttheme)
