--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(ggparagraph)
 export(ggpie)
 export(ggqqplot)
 export(ggscatter)
+export(ggscatterhist)
 export(ggstripchart)
 export(ggtext)
 export(ggtexttable)
