--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(get_legend)
 export(get_palette)
 export(ggadd)
 export(ggarrange)
+export(ggballoonplot)
 export(ggbarplot)
 export(ggboxplot)
 export(ggdensity)
