new function ggdonutchart added

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -65,6 +65,8 @@ Collate:
     'ggbarplot.R'
     'ggboxplot.R'
     'ggdensity.R'
+    'ggpie.R'
+    'ggdonutchart.R'
     'stat_conf_ellipse.R'
     'stat_chull.R'
     'ggdotchart.R'
@@ -77,7 +79,6 @@ Collate:
     'ggmaplot.R'
     'ggpaired.R'
     'ggparagraph.R'
-    'ggpie.R'
     'ggpubr_args.R'
     'ggqqplot.R'
     'utilities_label.R'
