--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(ggballoonplot)
 export(ggbarplot)
 export(ggboxplot)
 export(ggdensity)
+export(ggdonutchart)
 export(ggdotchart)
 export(ggdotplot)
 export(ggecdf)
