new function to add p-value generated elsewhere #81 #65

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ export(stat_compare_means)
 export(stat_conf_ellipse)
 export(stat_cor)
 export(stat_mean)
+export(stat_pvalue_manual)
 export(stat_stars)
 export(table_cell_bg)
 export(table_cell_font)
@@ -89,6 +90,8 @@ importFrom(dplyr,everything)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
 importFrom(dplyr,summarise)
+importFrom(dplyr,tibble)
 importFrom(grid,drawDetails)
 importFrom(magrittr,"%>%")
