--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(stat_conf_ellipse)
 export(stat_cor)
 export(stat_mean)
 export(stat_pvalue_manual)
+export(stat_regline_equation)
 export(stat_stars)
 export(table_cell_bg)
 export(table_cell_font)
@@ -94,6 +95,7 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
+importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,tibble)
 importFrom(glue,glue)
