geom_signif reexported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(facet)
 export(fill_palette)
 export(font)
 export(geom_exec)
+export(geom_signif)
 export(get_legend)
 export(get_palette)
 export(ggadd)
@@ -98,6 +99,7 @@ importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,tibble)
+importFrom(ggsignif,geom_signif)
 importFrom(glue,glue)
 importFrom(grid,drawDetails)
 importFrom(magrittr,"%>%")
