--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,7 @@ Suggests:
     knitr,
     RColorBrewer,
     gtable
-URL: http://www.sthda.com/english/rpkgs/ggpubr
+URL: https://rpkgs.datanovia.com/ggpubr/
 BugReports: https://github.com/kassambara/ggpubr/issues
 RoxygenNote: 6.1.1
 Collate:
