--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(desc_statby)
 export(facet)
 export(fill_palette)
 export(font)
+export(geom_bracket)
 export(geom_exec)
 export(geom_signif)
 export(get_legend)
@@ -68,6 +69,7 @@ export(rremove)
 export(set_palette)
 export(show_line_types)
 export(show_point_shapes)
+export(stat_bracket)
 export(stat_chull)
 export(stat_compare_means)
 export(stat_conf_ellipse)
@@ -103,3 +105,4 @@ importFrom(ggsignif,geom_signif)
 importFrom(glue,glue)
 importFrom(grid,drawDetails)
 importFrom(magrittr,"%>%")
+importFrom(rlang,"!!")
