--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,4 +105,6 @@ importFrom(ggsignif,geom_signif)
 importFrom(glue,glue)
 importFrom(grid,drawDetails)
 importFrom(magrittr,"%>%")
+importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
+importFrom(rlang,syms)
