--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ export(stat_compare_means)
 export(stat_conf_ellipse)
 export(stat_cor)
 export(stat_mean)
+export(stat_overlay_normal_density)
 export(stat_pvalue_manual)
 export(stat_regline_equation)
 export(stat_stars)
