--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(set_palette)
 export(show_line_types)
 export(show_point_shapes)
 export(stat_bracket)
+export(stat_central_tendency)
 export(stat_chull)
 export(stat_compare_means)
 export(stat_conf_ellipse)
