--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -103,6 +103,7 @@ reference:
       - stat_chull
       - stat_conf_ellipse
       - stat_mean
+      - stat_central_tendency
       - reexports
 
 
