Support added for creating stacked bars with errorbars #147

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,4 +108,5 @@ importFrom(grid,drawDetails)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
+importFrom(rlang,.data)
 importFrom(rlang,syms)
