--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,11 +99,11 @@ export(ttheme)
 export(xscale)
 export(yscale)
 import(ggplot2)
-importFrom(dplyr,arrange_)
+importFrom(dplyr,arrange)
+importFrom(dplyr,desc)
 importFrom(dplyr,do)
 importFrom(dplyr,everything)
 importFrom(dplyr,group_by)
-importFrom(dplyr,group_by_)
 importFrom(dplyr,group_nest)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
@@ -120,6 +120,10 @@ importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
 importFrom(rlang,.data)
 importFrom(rlang,syms)
+importFrom(rstatix,df_arrange)
+importFrom(rstatix,df_group_by)
+importFrom(rstatix,df_nest_by)
+importFrom(rstatix,df_select)
 importFrom(rstatix,df_split_by)
 importFrom(rstatix,get_summary_stats)
 importFrom(tibble,as_tibble)
